--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -289,7 +289,7 @@
                                             <span style="color: red"> *</span>
                                         </label>
                                         <select
-                                            class="form-control select2"
+                                            class="form-control"
                                             id="architectures"
                                             name="architectures"
                                             multiple="multiple"
@@ -311,7 +311,7 @@
                                             <span style="color: red"> *</span>
                                         </label>
                                         <select
-                                            class="form-control select2 border-task-description"
+                                            class="form-control border-task-description"
                                             id="systemOutlines"
                                             name="systemOutlines"
                                             multiple="multiple"
@@ -336,7 +336,7 @@
                                         >
 
                                         <select
-                                            class="form-control select2 border-task-description"
+                                            class="form-control border-task-description"
                                             id="deliverable"
                                             name="deliverable"
                                             multiple="multiple"
@@ -1197,7 +1197,7 @@
         <script src="/lib/tempusdominus/js/moment.min.js"></script>
         <script src="/lib/tempusdominus/js/moment-timezone.min.js"></script>
         <script src="/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
         <script src="/lib/quill/quill.min.js"></script>
 
         <!-- Template Javascript -->
@@ -1207,8 +1207,8 @@
         <!-- sort (department, project), form validation and search bar behavior are all here -->
         <script src="/js/custome.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script>
+        <script src="/js/bootstrap-select2.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/js/bootstrap-select.min.js"></script> -->
 
         <script type="module">
             class project {
