trying to fix error

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1187,7 +1187,7 @@
         <script src="/js/databales.min.js"></script>
 
         <!-- bootstrap -->
-        <script src="/js/bootstrap.bundle.min.js"></script>
+        <!-- <script src="/js/bootstrap.bundle.min.js"></script> -->
 
         <!-- javascript libraries -->
         <script src="/lib/chart/chart.min.js"></script>
@@ -1690,5 +1690,6 @@
                 });
             });
         </script>
+
     </body>
 </html>
