--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -85,7 +85,7 @@ vs
                                 aria-controls="gantt-chart"
                                 aria-selected="false"
                         >
-                            Gantt chart
+                            Calendar
                         </button>
                     </li>
                     <div
